--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -98,3 +98,32 @@ seg_nombre=Nombre Segmento
 seg_segmento=Segmento
 sub_seg_nombre=Nombre SubSegmento
 sub_seg_subsegmento=SubSegmento
+######## OUTLET MODULO ############
+out_outlet=Outlet
+out_datos_basicos=Datos B\u00e1sicos
+out_clasificacion=Clasificaci\u00f3n
+out_ubicacion=Ubicaci\u00f3n
+out_datos_contacto=Datos Contacto
+out_otros_datos=Otros Datos
+out_razon_social=Raz\u00f3n Social
+out_tipo_outlet=Tipo
+out_tipo_natural=Natural
+out_tipo_juri=Jur\u00eddico
+out_nombre=Nombre del Outlet
+out_nit=NIT
+out_nombre_propietario=Nombres Propietario
+out_apellidos_propietario=Apellidos Propietario
+out_potencial=Potencial
+out_distribuidor=Distribuidor
+out_distri_depto=Departamento Distribuidor
+out_out_depto=Departamento Outlet
+out_distri_mpio=Municipio Distribuidor
+out_out_mpio=Municipio Outlet
+out_direccion=Direcci\u00f3n
+out_barrio=Barrio
+out_celular=Celular
+out_tel_uno=Tel\u00e9fono Uno
+out_tel_dos=Tel\u00e9fono Dos
+out_linea_negocio=L\u00ednea de Negocio
+out_codigo_ean=C\u00f3digo EAN
+out_punto_venta=Punto de Venta
