css usuario consulta

--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -127,3 +127,5 @@ out_tel_dos=Tel\u00e9fono Dos
 out_linea_negocio=L\u00ednea de Negocio
 out_codigo_ean=C\u00f3digo EAN
 out_punto_venta=Punto de Venta
+out_kiernan=ID Kiernan
+out_cod_cliente_distri=C\u00f3digo cliente distribuidor
