css usuario consulta

--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -47,6 +47,10 @@ m_canal_consultar=Consultar Canal
 m_canal_sub=Gesti\u00f3n SubCanal
 m_canal_sub_crear=Crear SubCanal
 m_canal_sub_consultar=Consultar SubCanal
+m_distribuidor=Distribuidor
+m_distri_crear=Crear Distribuidor
+m_distri_consultar=Consultar Distribuidor
+m_distri_nombre=Nombre Distribuidor
 ###OUTLET
 m_outlet=Outlet
 m_outlet_crear=Crear Outlet
