--- a/DiageoMDMWeb/src/main/resources/ValidationMessages.properties
+++ b/DiageoMDMWeb/src/main/resources/ValidationMessages.properties
@@ -3,3 +3,4 @@
 # and open the template in the editor.
 correo.pattern=Formato de correo electr\u00f3nico inv\u00e1lido
 size.invalido=Tama\u00f1o del campo no puede exceder los {max} car\u00e1cteres
+password.rules=La contrase\u00f1a no cumple con los requisitos
