--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -24,6 +24,10 @@ btn_logout=Cerrar Sesi\u00f3n
 btn_send=Enviar
 btn_detalle=Ver detalle
 btn_regresar=Regresar
+btn_select_all=Seleccionar todo
+btn_unselect_all=Deseleccionar todo
+btn_acept=Aceptar
+btn_cancel=Cancelar
 ###### MENU ######
 ###PERFIL
 m_perfil=Gestion Perfil
@@ -64,6 +68,9 @@ m_battleground_consultar=Consultar Battleground
 m_distribuidor=Distribuidor
 m_distribuidor_create=Crear Distribuidor
 m_distribuidor_consultar=Consultar Distribuidor
+m_distri_location=Ubicaci\u00f3n distribuidor
+m_distri_location_create=Crear ubicaci\u00f3n distribuidor
+m_distri_location_search=Buscar ubicaci\u00f3n distribuidor
 ###### SISTEMA ######
 sis_user_pass=Usuario o contrase\u00f1a incorrectos
 sis_page_error=La URL que ingreso es incorrecta
@@ -78,6 +85,15 @@ cam_pass_actual_nueva_no_iguales=La nueva contrase\u00f1a no puede ser igual a l
 cam_pass_primer_ingreso=Este es su primer ingreso, debe cambiar la contrase\u00f1a antes de continuar
 cam_pass_cambio_exitoso=Contrase\u00f1a cambiada con \u00e9xito
 cam_pass_cambio_fallo=La contrase\u00f1a no se logr\u00f3 cambiar
+cam_pass_header_pass_rules=Reglas para la contrase\u00f1a
+cam_pass_pass_rules=M\u00ednimo 8 caracteres de longitud
+cam_pass_pass_rules_1=Debe incluir letras y n\u00fameros, m\u00ednimo una letra may\u00fascula
+cam_pass_pass_rules_2=Debe incluir m\u00ednimo un caracter especial "@#$%^&+="
+cam_pass_good=Bien
+cam_pass_strong=Fuerte
+cam_pass_weak=D\u00e9bil
+cam_pass_promt=Por favor ingrese un password
+cam_pass_used=La contrase\u00f1a que ingres\u00f3 ya fue utilizada
 ######## GESTION USUARIO ############
 usu_creado_exito=Usuario creado exitosamente
 usu_creado_fallo=Error al crear el usuario
@@ -91,6 +107,9 @@ usu_perfil=Perfil
 usu_correo_existe=El usuario con el correo ingresado ya existe
 usu_mis_datos=Datos modificados con \u00e9xito
 usu_erro_mis_datos=Error al guardar los datos
+usu_chain=Cadena
+usu_edit_detail=Editar detalle
+usu_edit_level=Editar nivel
 ######## CAMBIAR IDIOMA ############
 cam_idi=Cambiar idioma
 ######## CANAL ############
@@ -105,7 +124,7 @@ sub_seg_subsegmento=SubSegmento
 ######## OUTLET MODULO ############
 out_outlet=Outlet
 out_datos_basicos=Datos B\u00e1sicos
-out_clasificacion=Clasificaci\u00f3n
+out_clasificacion=Segmentaci\u00f3n
 out_ubicacion=Ubicaci\u00f3n
 out_datos_contacto=Datos Contacto
 out_otros_datos=Otros Datos
@@ -133,3 +152,8 @@ out_codigo_ean=C\u00f3digo EAN
 out_punto_venta=Punto de Venta
 out_kiernan=ID Kiernan
 out_cod_cliente_distri=C\u00f3digo cliente distribuidor
+out_seg_functional=Segmentaci\u00f3n funcional
+out_seg_potential=Segmentaci\u00f3n potencial
+############ LOCATION #############
+loc_depto=Departamento
+loc_mpio=Municipio
