--- a/AdminControllerWeb/pom.xml
+++ b/AdminControllerWeb/pom.xml
@@ -31,7 +31,12 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
-            <scope>provided</scope>
+            <scope>provided</scope>            
+        </dependency>
+        <dependency>
+            <groupId>com.diageo</groupId>
+            <artifactId>DiageoNegocio</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
