--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -28,6 +28,9 @@ btn_select_all=Seleccionar todo
 btn_unselect_all=Deseleccionar todo
 btn_acept=Aceptar
 btn_cancel=Cancelar
+btn_add=Agregar
+btn_remove=Eliminar
+btn_edit=Editar
 ###### MENU ######
 ###PERFIL
 m_perfil=Gestion Perfil
@@ -78,7 +81,7 @@ sis_volver_login=Volver a la p\u00e1gina de login
 sis_datos_guardados_exito=Datos guardados con \u00e9xito
 sis_datos_guardados_sin_exito=No se logr\u00f3 guardar los cambios
 ###### CAMBIAR PASS ######
-cam_pass_actual=Contrasea\u00f1a actual
+cam_pass_actual=Contrase\u00f1a actual
 cam_pass_nueva_contra=Nueva contrase\u00f1a
 cam_pass_repetir_contra=Repetir contrase\u00f1a
 cam_pass_actual_nueva_no_iguales=La nueva contrase\u00f1a no puede ser igual a la actual
@@ -110,6 +113,9 @@ usu_erro_mis_datos=Error al guardar los datos
 usu_chain=Cadena
 usu_edit_detail=Editar detalle
 usu_edit_level=Editar nivel
+usu_mjs_distri_exists=El distribuidor que intenta agregar ya est\u00e1
+usu_add_to_user=Distribuidores Agregados al Usuario
+usu_distri_of=Distribuidores de
 ######## CAMBIAR IDIOMA ############
 cam_idi=Cambiar idioma
 ######## CANAL ############
@@ -154,6 +160,10 @@ out_kiernan=ID Kiernan
 out_cod_cliente_distri=C\u00f3digo cliente distribuidor
 out_seg_functional=Segmentaci\u00f3n funcional
 out_seg_potential=Segmentaci\u00f3n potencial
+out_management=OUTLETS A GESTIONAR
 ############ LOCATION #############
 loc_depto=Departamento
 loc_mpio=Municipio
+############ STATE #############
+sta_approval=Aprobado
+sta_reject=Rechazado
