--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -74,12 +74,17 @@ m_distribuidor_consultar=Consultar Distribuidor
 m_distri_location=Ubicaci\u00f3n distribuidor
 m_distri_location_create=Crear ubicaci\u00f3n distribuidor
 m_distri_location_search=Buscar ubicaci\u00f3n distribuidor
+###POTENTIAL
+m_management_potential=Gesti\u00f3n potencial
+m_potential_create=Crear potencial
+m_potential_search=Buscar potencial
 ###### SISTEMA ######
 sis_user_pass=Usuario o contrase\u00f1a incorrectos
 sis_page_error=La URL que ingreso es incorrecta
 sis_volver_login=Volver a la p\u00e1gina de login
 sis_datos_guardados_exito=Datos guardados con \u00e9xito
 sis_datos_guardados_sin_exito=No se logr\u00f3 guardar los cambios
+sis_approbation_masive=Registros aprobados
 ###### CAMBIAR PASS ######
 cam_pass_actual=Contrase\u00f1a actual
 cam_pass_nueva_contra=Nueva contrase\u00f1a
@@ -161,9 +166,26 @@ out_cod_cliente_distri=C\u00f3digo cliente distribuidor
 out_seg_functional=Segmentaci\u00f3n funcional
 out_seg_potential=Segmentaci\u00f3n potencial
 out_management=OUTLETS A GESTIONAR
+out_approbation_massive=Aprobaci\u00f3n masiva
+out_massive_message_reject=Outlet rechazado por segmentaci\u00f3n
+out_message_not_potential=Sin segmentaci\u00f3n potencial
 ############ LOCATION #############
 loc_depto=Departamento
 loc_mpio=Municipio
 ############ STATE #############
 sta_approval=Aprobado
 sta_reject=Rechazado
+############ DISTRIBUTOR #############
+dis_commercial_management=Gerencia Comercial
+dis_branch=Sucursal
+############ POTENTIAL #############
+pot_range=Rango
+pot_new_client=Cliente nuevo
+pot_old_client=Cliente antiguo
+pot_type_client=Tipo de cliente
+pot_value_segment=Valor segmentaci\u00f3n
+pot_value_initial=Valor inicial
+pot_value_final=Valor final
+pot_exclusive=Excluyente
+pot_inclusive=Incluyente
+pot_limit=L\u00edmites
