--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -78,6 +78,11 @@ m_distri_location_search=Buscar ubicaci\u00f3n distribuidor
 m_management_potential=Gesti\u00f3n potencial
 m_potential_create=Crear potencial
 m_potential_search=Buscar potencial
+###REPORTS
+m_report=Reportes
+m_report_create_outlet=Crear Reporte Outlets
+m_report_create_distributor=Crear Reporte Distribuidor
+m_report_outlet_pendding=Outlets pendientes
 ###### SISTEMA ######
 sis_user_pass=Usuario o contrase\u00f1a incorrectos
 sis_page_error=La URL que ingreso es incorrecta
@@ -166,6 +171,8 @@ out_cod_cliente_distri=C\u00f3digo cliente distribuidor
 out_seg_functional=Segmentaci\u00f3n funcional
 out_seg_potential=Segmentaci\u00f3n potencial
 out_management=OUTLETS A GESTIONAR
+out_management_new=OUTLETS A GESTIONAR NUEVOS
+out_management_old=OUTLETS A GESTIONAR ANTIGUOS
 out_approbation_massive=Aprobaci\u00f3n masiva
 out_massive_message_reject=Outlet rechazado por segmentaci\u00f3n
 out_message_not_potential=Sin segmentaci\u00f3n potencial
