--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -63,6 +63,7 @@ m_outlet=Outlet
 m_outlet_crear=Crear Outlet
 m_outlet_consultar=Consultar Outlet
 m_outlet_carga=Carga masiva de outlets
+m_chain_create=Crear cadena
 ###BATTLEGROUND
 m_battleground=Battleground
 m_battleground_crear=Crear Battleground
@@ -123,10 +124,13 @@ usu_erro_mis_datos=Error al guardar los datos
 usu_chain=Cadena
 usu_edit_detail=Editar detalle
 usu_edit_level=Editar nivel
-usu_mjs_distri_exists=El distribuidor que intenta agregar ya est\u00e1
+usu_msg_distri_exists=El distribuidor que intenta agregar ya est\u00e1
 usu_add_to_user=Distribuidores Agregados al Usuario
 usu_distri_of=Distribuidores de
-######## CAMBIAR IDIOMA ############
+usu_msg_segment_exists=El segmento ya fue agregado
+usu_msg_all=Todo
+usu_msg_validate_list_permission=Hay registros sin validar en la lista de permisos
+####### CAMBIAR IDIOMA ############
 cam_idi=Cambiar idioma
 ######## CANAL ############
 can_canal=Canal
@@ -196,3 +200,12 @@ pot_value_final=Valor final
 pot_exclusive=Excluyente
 pot_inclusive=Incluyente
 pot_limit=L\u00edmites
+############ CHAIN #############
+chain_code_chain_father=C\u00f3digo cadena
+chain_code_ean=C\u00f3digo EAN
+chain_name=Nombre cadena
+chain_code_pdv=C\u00f3digo PDV
+chain_code_ean_pdv=C\u00f3digo EAN PDV
+chain_name_pdv=Nombre PDV
+chain_cluster=Cluster
+chain_phone=Tel\u00e9fono
