--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -209,3 +209,6 @@ chain_code_ean_pdv=C\u00f3digo EAN PDV
 chain_name_pdv=Nombre PDV
 chain_cluster=Cluster
 chain_phone=Tel\u00e9fono
+############ PARAMETER #############
+param=Par\u00e1metros
+param_segment_query=Par\u00e1metros de consulta
