--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -212,3 +212,4 @@ chain_phone=Tel\u00e9fono
 ############ PARAMETER #############
 param=Par\u00e1metros
 param_segment_query=Par\u00e1metros de consulta
+param_message_duplicate=El subsegmento ya fue agregado a la lista de par\u00e1metros
