--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -7,6 +7,9 @@ info=Informaci\u00f3in
 advertencia=Advertencia
 seleccion=-Seleccione-
 estado=Estado
+admin=Administrador
+father=Padre
+is_father=Es padre
 ####### LOGIN ##########
 user=Usuario
 password=Contrase\u00f1a
@@ -64,6 +67,7 @@ m_outlet_crear=Crear Outlet
 m_outlet_consultar=Consultar Outlet
 m_outlet_carga=Carga masiva de outlets
 m_chain_create=Crear cadena
+m_chain_search=Consultar cadena
 ###BATTLEGROUND
 m_battleground=Battleground
 m_battleground_crear=Crear Battleground
@@ -75,6 +79,7 @@ m_distribuidor_consultar=Consultar Distribuidor
 m_distri_location=Ubicaci\u00f3n distribuidor
 m_distri_location_create=Crear ubicaci\u00f3n distribuidor
 m_distri_location_search=Buscar ubicaci\u00f3n distribuidor
+distri_father=Distribuidor padre
 ###POTENTIAL
 m_management_potential=Gesti\u00f3n potencial
 m_potential_create=Crear potencial
@@ -130,6 +135,7 @@ usu_distri_of=Distribuidores de
 usu_msg_segment_exists=El segmento ya fue agregado
 usu_msg_all=Todo
 usu_msg_validate_list_permission=Hay registros sin validar en la lista de permisos
+usu_msg_validate_list_permission_distributor=No hay distribuidores agregados a este usuario
 ####### CAMBIAR IDIOMA ############
 cam_idi=Cambiar idioma
 ######## CANAL ############
@@ -204,12 +210,21 @@ pot_limit=L\u00edmites
 chain_code_chain_father=C\u00f3digo cadena
 chain_code_ean=C\u00f3digo EAN
 chain_name=Nombre cadena
+chain_business_name=Raz\u00f3n social
 chain_code_pdv=C\u00f3digo PDV
-chain_code_ean_pdv=C\u00f3digo EAN PDV
+chain_code_ean_pdv=C\u00f3digo EAN
 chain_name_pdv=Nombre PDV
 chain_cluster=Cluster
 chain_phone=Tel\u00e9fono
+chain_id=Id Cadena
+chain_city=Ciudad
 ############ PARAMETER #############
 param=Par\u00e1metros
 param_segment_query=Par\u00e1metros de consulta
 param_message_duplicate=El subsegmento ya fue agregado a la lista de par\u00e1metros
+############ ATHENA #############
+athena_code=C\u00f3digo Athena
+############ ATHENA #############
+regional=Regional
+regional_create=Crear regional
+regional_search=Consultar regional
