--- a/DiageoMDMWeb/pom.xml
+++ b/DiageoMDMWeb/pom.xml
@@ -70,7 +70,16 @@
             <artifactId>poi</artifactId>
             <version>3.14</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.5.0-b01</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>primefaces-extensions</artifactId>
+            <version>6.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
