--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -2,6 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 diageo=DIAGEO
+tittle_app=Outlet Database
 error=Error
 info=Informaci\u00f3in
 advertencia=Advertencia
@@ -10,11 +11,13 @@ estado=Estado
 admin=Administrador
 father=Padre
 is_father=Es padre
+code=C\u00f3digo
+description=Descripci\u00f3n
 ####### LOGIN ##########
 user=Usuario
 password=Contrase\u00f1a
 mail=Correo electr\u00f3nico
-forgot_pass=\u00bfOlvido su contrase\u00f1a?
+forgot_pass=\u00bfOlvid\u00f3 su contrase\u00f1a?
 recover_pass=Recuperar contrase\u00f1a
 rememberme=\u00bfRecordarme?
 welcome=Bienvenido
@@ -28,7 +31,7 @@ btn_send=Enviar
 btn_detalle=Ver detalle
 btn_regresar=Regresar
 btn_select_all=Seleccionar todo
-btn_unselect_all=Deseleccionar todo
+btn_unselect_all=Quitar selecci\u00f3n
 btn_acept=Aceptar
 btn_cancel=Cancelar
 btn_add=Agregar
@@ -36,7 +39,7 @@ btn_remove=Eliminar
 btn_edit=Editar
 ###### MENU ######
 ###PERFIL
-m_perfil=Gestion Perfil
+m_perfil=Gesti\u00f3n Perfil
 m_mis_datos=Mis datos
 m_cambiar_contrase=Cambiar contrase\u00f1a
 m_idioma=Cambiar idioma
@@ -89,6 +92,8 @@ m_report=Reportes
 m_report_create_outlet=Crear Reporte Outlets
 m_report_create_distributor=Crear Reporte Distribuidor
 m_report_outlet_pendding=Outlets pendientes
+m_report_user=Reporte por usuario
+m_report_casuistry=Casu\u00edsticas
 ###### SISTEMA ######
 sis_user_pass=Usuario o contrase\u00f1a incorrectos
 sis_page_error=La URL que ingreso es incorrecta
@@ -113,6 +118,7 @@ cam_pass_strong=Fuerte
 cam_pass_weak=D\u00e9bil
 cam_pass_promt=Por favor ingrese un password
 cam_pass_used=La contrase\u00f1a que ingres\u00f3 ya fue utilizada
+cam_pass_current_pass_dont_match=La contrase\u00f1a ingresada en el campo de contrase\u00f1a actual no es igual a la registrada
 ######## GESTION USUARIO ############
 usu_creado_exito=Usuario creado exitosamente
 usu_creado_fallo=Error al crear el usuario
@@ -186,12 +192,22 @@ out_management_old=OUTLETS A GESTIONAR ANTIGUOS
 out_approbation_massive=Aprobaci\u00f3n masiva
 out_massive_message_reject=Outlet rechazado por segmentaci\u00f3n
 out_message_not_potential=Sin segmentaci\u00f3n potencial
+out_code=C\u00f3digo outlet
+out_phones=Tel\u00e9fonos
+out_type_phone=Tipo Tel\u00e9fono
+out_number=N\u00famero
 ############ LOCATION #############
 loc_depto=Departamento
 loc_mpio=Municipio
+loc_latitude=Latitud
+loc_longitude=Longitud
 ############ STATE #############
 sta_approval=Aprobado
 sta_reject=Rechazado
+status=Estado
+active=Activo
+inactive=Inactivo
+locked=Bloqueado
 ############ DISTRIBUTOR #############
 dis_commercial_management=Gerencia Comercial
 dis_branch=Sucursal
@@ -218,6 +234,8 @@ chain_cluster=Cluster
 chain_phone=Tel\u00e9fono
 chain_id=Id Cadena
 chain_city=Ciudad
+chain_msg_phone_empty=EL n\u00famero de tel\u00e9fono no puede estar vac\u00edo
+chain_msg_phone_pattern=El tel\u00e9fono debe ser n\u00famerico
 ############ PARAMETER #############
 param=Par\u00e1metros
 param_segment_query=Par\u00e1metros de consulta
@@ -228,3 +246,9 @@ athena_code=C\u00f3digo Athena
 regional=Regional
 regional_create=Crear regional
 regional_search=Consultar regional
+############ RELATION CUSTOMER #############
+rel_cus=Relaci\u00f3n con customers
+############ REPORTS ######################
+report_message_empty_list=La consulta no arroja resultados
+############ FIELDSET ######################
+fs_account=Mi cuenta
