--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -13,6 +13,7 @@ father=Padre
 is_father=Es padre
 code=C\u00f3digo
 description=Descripci\u00f3n
+report=Reporte
 ####### LOGIN ##########
 user=Usuario
 password=Contrase\u00f1a
@@ -24,6 +25,8 @@ welcome=Bienvenido
 ingreso_fallido=\u00daltimo ingreso fallido:
 ingreso_exitoso=\u00daltimo ingreso exitoso:
 user_locked=Usuario bloqueado, por favor comuniquese con el administrador
+invalid_entry=Ingreso invalido
+invalid_link=El link ya expir\u00f3, genere otro link en la opci\u00f3n de <b>\u00bfOlvid\u00f3 su contrase\u00f1a?</b> en la p\u00e1gina del login
 ###### BUTTONS ######
 btn_login=Entrar
 btn_logout=Cerrar Sesi\u00f3n
@@ -119,6 +122,7 @@ cam_pass_weak=D\u00e9bil
 cam_pass_promt=Por favor ingrese un password
 cam_pass_used=La contrase\u00f1a que ingres\u00f3 ya fue utilizada
 cam_pass_current_pass_dont_match=La contrase\u00f1a ingresada en el campo de contrase\u00f1a actual no es igual a la registrada
+cam_pass_msg_update_success=La contrase\u00f1a fue cambiada exitosamente, por favor vaya nuevamente a la p\u00e1gina de inicio
 ######## GESTION USUARIO ############
 usu_creado_exito=Usuario creado exitosamente
 usu_creado_fallo=Error al crear el usuario
@@ -196,6 +200,14 @@ out_code=C\u00f3digo outlet
 out_phones=Tel\u00e9fonos
 out_type_phone=Tipo Tel\u00e9fono
 out_number=N\u00famero
+out_ocs_1=Ocs primary
+out_ocs_2=Ocs secondary
+out_website=Sitio Web
+out_verification_number=N\u00famero de verificaci\u00f3n
+out_wine=Wine
+out_beer=Beer
+out_spirtis=Spirtis
+out_msg_3party_exist=El distribuidor seleccionado ya fue agregado
 ############ LOCATION #############
 loc_depto=Departamento
 loc_mpio=Municipio
