--- a/DiageoMDMWeb/pom.xml
+++ b/DiageoMDMWeb/pom.xml
@@ -80,6 +80,29 @@
             <artifactId>primefaces-extensions</artifactId>
             <version>6.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity.tools</groupId>
+            <artifactId>velocity-tools</artifactId>
+            <version>2.0-alpha1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.velocity/velocity-tools -->
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+            <version>2.0-beta3</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/logkit/logkit -->
+        <dependency>
+            <groupId>logkit</groupId>
+            <artifactId>logkit</artifactId>
+            <version>1.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
