--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -27,6 +27,7 @@ ingreso_exitoso=\u00daltimo ingreso exitoso:
 user_locked=Usuario bloqueado, por favor comuniquese con el administrador
 invalid_entry=Ingreso invalido
 invalid_link=El link ya expir\u00f3, genere otro link en la opci\u00f3n de <b>\u00bfOlvid\u00f3 su contrase\u00f1a?</b> en la p\u00e1gina del login
+msg_mail_send_recover_password=Se envi\u00f3 un link para recuperar la contrase\u00f1a a su correo.
 ###### BUTTONS ######
 btn_login=Entrar
 btn_logout=Cerrar Sesi\u00f3n
@@ -40,6 +41,7 @@ btn_cancel=Cancelar
 btn_add=Agregar
 btn_remove=Eliminar
 btn_edit=Editar
+btn_reject=Rechazar
 ###### MENU ######
 ###PERFIL
 m_perfil=Gesti\u00f3n Perfil
@@ -146,6 +148,7 @@ usu_msg_segment_exists=El segmento ya fue agregado
 usu_msg_all=Todo
 usu_msg_validate_list_permission=Hay registros sin validar en la lista de permisos
 usu_msg_validate_list_permission_distributor=No hay distribuidores agregados a este usuario
+usu_permission=Permisos
 ####### CAMBIAR IDIOMA ############
 cam_idi=Cambiar idioma
 ######## CANAL ############
@@ -200,12 +203,12 @@ out_code=C\u00f3digo outlet
 out_phones=Tel\u00e9fonos
 out_type_phone=Tipo Tel\u00e9fono
 out_number=N\u00famero
-out_ocs_1=Ocs primary
-out_ocs_2=Ocs secondary
+out_ocs_1=Ocs primario
+out_ocs_2=Ocs secundario
 out_website=Sitio Web
 out_verification_number=N\u00famero de verificaci\u00f3n
-out_wine=Wine
-out_beer=Beer
+out_wine=Vino
+out_beer=Cerveza
 out_spirtis=Spirtis
 out_msg_3party_exist=El distribuidor seleccionado ya fue agregado
 ############ LOCATION #############
@@ -216,6 +219,9 @@ loc_longitude=Longitud
 ############ STATE #############
 sta_approval=Aprobado
 sta_reject=Rechazado
+sta_pending_tmc=Pendiente TMC
+sta_pending_kam=Pendiente KAM
+sta_pending_commercial_manager=Pendiente Commercial Manager
 status=Estado
 active=Activo
 inactive=Inactivo
@@ -248,6 +254,7 @@ chain_id=Id Cadena
 chain_city=Ciudad
 chain_msg_phone_empty=EL n\u00famero de tel\u00e9fono no puede estar vac\u00edo
 chain_msg_phone_pattern=El tel\u00e9fono debe ser n\u00famerico
+chain_msg_customer_empty=Dig\u00edte el nombre de un cliente
 ############ PARAMETER #############
 param=Par\u00e1metros
 param_segment_query=Par\u00e1metros de consulta
@@ -264,3 +271,9 @@ rel_cus=Relaci\u00f3n con customers
 report_message_empty_list=La consulta no arroja resultados
 ############ FIELDSET ######################
 fs_account=Mi cuenta
+############ EMAIL SUBJECT ######################
+mail_recover_pass=Recuperar contrase\u00f1a
+mail_user_creation=Creaci\u00f3n de usuario sistema OUTLETDATABASE
+############ CUSTOMER ######################
+customer=Cliente
+customer_msg_equal=El cliente seleccionado ya fue agregado
