--- a/AthenaOut/pom.xml
+++ b/AthenaOut/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>DiageoNegocio</artifactId>
             <version>1.0</version>                        
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
