--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -4,7 +4,7 @@
 diageo=DIAGEO
 tittle_app=Outlet Database
 error=Error
-info=Informaci\u00f3in
+info=Informaci\u00f3n
 advertencia=Advertencia
 seleccion=-Seleccione-
 estado=Estado
@@ -56,15 +56,15 @@ m_usuario_consultar=Consultar Usuario
 m_segmento=Gesti\u00f3n Segmento
 m_segmento_crear=Crear Segmento
 m_segmento_consultar=Consultar Segmento
-m_segmento_sub=Gesti\u00f3n SubSegmento
-m_segmento_sub_crear=Crear SubSegmento
-m_segmento_sub_consultar=Consultar SubSegmento
+m_segmento_sub=Gesti\u00f3n Sub Segmento
+m_segmento_sub_crear=Crear Sub Segmento
+m_segmento_sub_consultar=Consultar Sub Segmento
 m_canal=Gesti\u00f3n Canal
 m_canal_crear=Crear Canal
 m_canal_consultar=Consultar Canal
-m_canal_sub=Gesti\u00f3n SubCanal
-m_canal_sub_crear=Crear SubCanal
-m_canal_sub_consultar=Consultar SubCanal
+m_canal_sub=Gesti\u00f3n Sub Canal
+m_canal_sub_crear=Crear Sub Canal
+m_canal_sub_consultar=Consultar Sub Canal
 m_distribuidor=Distribuidor
 m_distri_crear=Crear Distribuidor
 m_distri_consultar=Consultar Distribuidor
@@ -74,8 +74,8 @@ m_outlet=Outlet
 m_outlet_crear=Crear Outlet
 m_outlet_consultar=Consultar Outlet
 m_outlet_carga=Carga masiva de outlets
-m_chain_create=Crear cadena
-m_chain_search=Consultar cadena
+m_chain_create=Crear Cadena
+m_chain_search=Consultar Cadena
 ###BATTLEGROUND
 m_battleground=Battleground
 m_battleground_crear=Crear Battleground
@@ -84,14 +84,14 @@ m_battleground_consultar=Consultar Battleground
 m_distribuidor=Distribuidor
 m_distribuidor_create=Crear Distribuidor
 m_distribuidor_consultar=Consultar Distribuidor
-m_distri_location=Ubicaci\u00f3n distribuidor
-m_distri_location_create=Crear ubicaci\u00f3n distribuidor
-m_distri_location_search=Buscar ubicaci\u00f3n distribuidor
+m_distri_location=Ubicaci\u00f3n Distribuidor
+m_distri_location_create=Crear Ubicaci\u00f3n Distribuidor
+m_distri_location_search=Buscar Ubicaci\u00f3n Distribuidor
 distri_father=Distribuidor padre
 ###POTENTIAL
-m_management_potential=Gesti\u00f3n potencial
-m_potential_create=Crear potencial
-m_potential_search=Buscar potencial
+m_management_potential=Gesti\u00f3n Potencial
+m_potential_create=Crear Potencial
+m_potential_search=Buscar Potencial
 ###REPORTS
 m_report=Reportes
 m_report_create_outlet=Crear Reporte Outlets
@@ -154,12 +154,12 @@ cam_idi=Cambiar idioma
 ######## CANAL ############
 can_canal=Canal
 can_nombre=Nombre Canal
-sub_can_nombre=Nombre SubCanal
-sub_subcanal=SubCanal
+sub_can_nombre=Nombre Sub Canal
+sub_subcanal=Sub Canal
 seg_nombre=Nombre Segmento
 seg_segmento=Segmento
-sub_seg_nombre=Nombre SubSegmento
-sub_seg_subsegmento=SubSegmento
+sub_seg_nombre=Nombre Sub Segmento
+sub_seg_subsegmento=Sub Segmento
 ######## OUTLET MODULO ############
 out_outlet=Outlet
 out_datos_basicos=Datos B\u00e1sicos
@@ -209,8 +209,8 @@ out_website=Sitio Web
 out_verification_number=N\u00famero de verificaci\u00f3n
 out_wine=Vino
 out_beer=Cerveza
-out_spirtis=Spirtis
-out_msg_3party_exist=El distribuidor seleccionado ya fue agregado
+out_spirtis=Spirits
+out_msg_3party_exist=El Distribuidor seleccionado ya fue agregado
 ############ LOCATION #############
 loc_depto=Departamento
 loc_mpio=Municipio
@@ -258,15 +258,15 @@ chain_msg_customer_empty=Dig\u00edte el nombre de un cliente
 ############ PARAMETER #############
 param=Par\u00e1metros
 param_segment_query=Par\u00e1metros de consulta
-param_message_duplicate=El subsegmento ya fue agregado a la lista de par\u00e1metros
+param_message_duplicate=El sub Segmento ya fue agregado a la lista de par\u00e1metros
 ############ ATHENA #############
 athena_code=C\u00f3digo Athena
 ############ ATHENA #############
 regional=Regional
-regional_create=Crear regional
-regional_search=Consultar regional
+regional_create=Crear Regional
+regional_search=Consultar Regional
 ############ RELATION CUSTOMER #############
-rel_cus=Relaci\u00f3n con customers
+rel_cus=Relaci\u00f3n con clientes
 ############ REPORTS ######################
 report_message_empty_list=La consulta no arroja resultados
 ############ FIELDSET ######################
