--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -211,6 +211,7 @@ out_wine=Vino
 out_beer=Cerveza
 out_spirtis=Spirits
 out_msg_3party_exist=El Distribuidor seleccionado ya fue agregado
+out_msg_not_record=Sin registros para validar
 ############ LOCATION #############
 loc_depto=Departamento
 loc_mpio=Municipio
