--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -42,6 +42,7 @@ btn_add=Agregar
 btn_remove=Eliminar
 btn_edit=Editar
 btn_reject=Rechazar
+btn_approved=Aprobado
 ###### MENU ######
 ###PERFIL
 m_perfil=Gesti\u00f3n Perfil
