--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -276,6 +276,7 @@ fs_account=Mi cuenta
 ############ EMAIL SUBJECT ######################
 mail_recover_pass=Recuperar contrase\u00f1a
 mail_user_creation=Creaci\u00f3n de usuario sistema OUTLETDATABASE
+mail_notificacion=Notificaci\u00f3n OUTLET
 ############ CUSTOMER ######################
 customer=Cliente
 customer_msg_equal=El cliente seleccionado ya fue agregado
