--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -69,7 +69,7 @@ m_canal_sub_consultar=Consultar Sub Canal
 m_distribuidor=Distribuidor
 m_distri_crear=Crear Distribuidor
 m_distri_consultar=Consultar Distribuidor
-m_distri_nombre=Nombre Distribuidor
+m_distri_nombre=Canal del Distribuidor
 ###OUTLET
 m_outlet=Outlet
 m_outlet_crear=Crear Outlet
@@ -213,6 +213,7 @@ out_beer=Cerveza
 out_spirtis=Spirits
 out_msg_3party_exist=El Distribuidor seleccionado ya fue agregado
 out_msg_not_record=Sin registros para validar
+out_distributor_segmentation=Segmentaci\u00f3n del Distribuidor
 ############ LOCATION #############
 loc_depto=Departamento
 loc_mpio=Municipio
@@ -264,9 +265,9 @@ param_message_duplicate=El sub Segmento ya fue agregado a la lista de par\u00e1m
 ############ ATHENA #############
 athena_code=C\u00f3digo Athena
 ############ ATHENA #############
-regional=Regional
-regional_create=Crear Regional
-regional_search=Consultar Regional
+regional=Gerencia Comercial
+regional_create=Crear Gerencia Comercial
+regional_search=Consultar Gerencia Comercial
 ############ RELATION CUSTOMER #############
 rel_cus=Relaci\u00f3n con clientes
 ############ REPORTS ######################
@@ -280,3 +281,4 @@ mail_notificacion=Notificaci\u00f3n OUTLET
 ############ CUSTOMER ######################
 customer=Cliente
 customer_msg_equal=El cliente seleccionado ya fue agregado
+client_type=Tipo de Cliente
