--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/web.xml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <context-param>
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
-    </context-param>
+    </context-param>   
     <mime-mapping>
         <extension>eot</extension>
         <mime-type>application/vnd.ms-fontobject</mime-type>
@@ -60,4 +60,14 @@
     <error-page>
         <location>/faces/errorPage.xhtml</location>
     </error-page>
+    <filter>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-class>
+            org.primefaces.webapp.filter.FileUploadFilter
+        </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
 </web-app>
