--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -14,6 +14,7 @@ is_father=Es padre
 code=C\u00f3digo
 description=Descripci\u00f3n
 report=Reporte
+old=Anterior
 ####### LOGIN ##########
 user=Usuario
 password=Contrase\u00f1a
@@ -28,6 +29,7 @@ user_locked=Usuario bloqueado, por favor comuniquese con el administrador
 invalid_entry=Ingreso invalido
 invalid_link=El link ya expir\u00f3, genere otro link en la opci\u00f3n de <b>\u00bfOlvid\u00f3 su contrase\u00f1a?</b> en la p\u00e1gina del login
 msg_mail_send_recover_password=Se envi\u00f3 un link para recuperar la contrase\u00f1a a su correo.
+msg_not_outlets_select=No hay elementos seleccionados para la operaci\u00f3n masiva
 ###### BUTTONS ######
 btn_login=Entrar
 btn_logout=Cerrar Sesi\u00f3n
@@ -43,6 +45,7 @@ btn_remove=Eliminar
 btn_edit=Editar
 btn_reject=Rechazar
 btn_approved=Aprobado
+btn_approved_2=Aprovar
 ###### MENU ######
 ###PERFIL
 m_perfil=Gesti\u00f3n Perfil
@@ -178,6 +181,8 @@ out_nombre_propietario=Nombres Propietario
 out_apellidos_propietario=Apellidos Propietario
 out_potencial=Potencial
 out_distribuidor=Distribuidor
+out_distributor_new=Distribuidor Nuevo
+out_distributor_old=Distribuidor Antiguo
 out_distri_depto=Departamento Distribuidor
 out_out_depto=Departamento Outlet
 out_distri_mpio=Municipio Distribuidor
