--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -73,7 +73,7 @@ m_canal_sub_consultar=Consultar Sub Canal
 m_distribuidor=Distribuidor
 m_distri_crear=Crear Distribuidor
 m_distri_consultar=Consultar Distribuidor
-m_distri_nombre=Canal del Distribuidor
+m_distri_nombre=Nombre del Distribuidor
 ###OUTLET
 m_outlet=Outlet
 m_outlet_crear=Crear Outlet
@@ -104,6 +104,7 @@ m_report_create_distributor=Crear Reporte Distribuidor
 m_report_outlet_pendding=Outlets pendientes
 m_report_user=Reporte por usuario
 m_report_casuistry=Casu\u00edsticas
+m_report_distri=Reporte por distribuidor
 ###SALES
 m_sales_create=Crear Vendedor
 m_sales_search=Consultar Vendedor
@@ -241,6 +242,7 @@ locked=Bloqueado
 ############ DISTRIBUTOR #############
 dis_commercial_management=Gerencia Comercial
 dis_branch=Sucursal
+dis_branchs=Sucursales
 ############ POTENTIAL #############
 pot_range=Rango
 pot_new_client=Cliente nuevo
@@ -267,6 +269,7 @@ chain_city=Ciudad
 chain_msg_phone_empty=EL n\u00famero de tel\u00e9fono no puede estar vac\u00edo
 chain_msg_phone_pattern=El tel\u00e9fono debe ser n\u00famerico
 chain_msg_customer_empty=Dig\u00edte el nombre de un cliente
+chain_layer=Estrato
 ############ PARAMETER #############
 param=Par\u00e1metros
 param_segment_query=Par\u00e1metros de consulta
@@ -293,7 +296,13 @@ customer_msg_equal=El cliente seleccionado ya fue agregado
 client_type=Tipo de Cliente
 ############ SALES ######################
 sales=Vendedores
+sales_singular=Vendedor
 sales_nombre=Nombre del vendedor
 sales_manager=Gerente
 sales_focalizado=Focalizado
 sales_code_distri=C\u00f3digo Distribuidor
+sales_territory_intouch=Territorio Intouch
+############ distri ######################
+distri_pos_chain=Punto de venta cadena
+distri_pos_outlet=Punto de venta distribuidor
+
