--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -46,7 +46,7 @@ btn_remove=Eliminar
 btn_edit=Editar
 btn_reject=Rechazar
 btn_approved=Aprobado
-btn_approved_2=Aprovar
+btn_approved_2=Aprobar
 ###### MENU ######
 ###PERFIL
 m_perfil=Gesti\u00f3n Perfil
@@ -92,6 +92,8 @@ m_distribuidor_consultar=Consultar Distribuidor
 m_distri_location=Ubicaci\u00f3n Distribuidor
 m_distri_location_create=Crear Ubicaci\u00f3n Distribuidor
 m_distri_location_search=Buscar Ubicaci\u00f3n Distribuidor
+m_distr_admin_create=Crear Administrador Distribuidor
+m_distr_admin_search=Consultar Administrador Distribuidor
 distri_father=Distribuidor padre
 ###POTENTIAL
 m_management_potential=Gesti\u00f3n Potencial
@@ -305,4 +307,9 @@ sales_territory_intouch=Territorio Intouch
 ############ distri ######################
 distri_pos_chain=Punto de venta cadena
 distri_pos_outlet=Punto de venta distribuidor
-
+############ code ######################
+code_meico=C\u00f3digo Meico
+code_altipal=C\u00f3digo Altipal
+code_dialsa=C\u00f3digo Dialsa
+code_chain=C\u00f3digo Cadena
+name_admin=Nombre Administrador
