--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -41,12 +41,17 @@ btn_select_all=Seleccionar todo
 btn_unselect_all=Quitar selecci\u00f3n
 btn_acept=Aceptar
 btn_cancel=Cancelar
+btn_back=Volver
 btn_add=Agregar
 btn_remove=Eliminar
 btn_edit=Editar
 btn_reject=Rechazar
+btn_reject_all=Rechazar Todos
 btn_approved=Aprobado
 btn_approved_2=Aprobar
+btn_approved_all=Aprobar Todos
+btn_approved_selected=Aprobar Seleccionados
+btn_reject_selected=Rechazar Seleccionados
 ###### MENU ######
 ###PERFIL
 m_perfil=Gesti\u00f3n Perfil
@@ -160,6 +165,7 @@ usu_msg_all=Todo
 usu_msg_validate_list_permission=Hay registros sin validar en la lista de permisos
 usu_msg_validate_list_permission_distributor=No hay distribuidores agregados a este usuario
 usu_permission=Permisos
+usu_relation=Relacionar Usuarios
 ####### CAMBIAR IDIOMA ############
 cam_idi=Cambiar idioma
 ######## CANAL ############
@@ -316,3 +322,11 @@ code_chain=C\u00f3digo Cadena
 name_admin=Nombre Administrador
 btn_send_approved=Enviar Aprobaci\u00f3n
 cod_sap=C\u00f3digo SAP
+sis_msg_record_outlet_change=Registros cambiaron de estado exitosamente
+relation_user=Relaci\u00f3n Usuarios
+relation_modify=Modificar
+relation_read=Leer
+relation_msg_add=Usuario agregado correctamente
+relation_msg_add_exists=El usuario ya fue agregado
+relation_msg_delete=Se elimin\u00f3 de la tabla
+relation_msg_save=Relaciones creadas con \u00e9xito
