--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -242,8 +242,9 @@ sta_approval=Aprobado
 sta_reject=Rechazado
 sta_pending_tmc=Pendiente TMC
 sta_pending_tmc_potential=Pendiente TMC potencial
-sta_pending_kam=Pendiente KAM
+sta_pending_kam=Pendiente KAM/TMC Cadenas
 sta_pending_commercial_manager=Pendiente Commercial Manager
+sta_pending_approval=Pendiente Aprobaci\u00f3n
 status=Estado
 active=Activo
 inactive=Inactivo
@@ -330,3 +331,4 @@ relation_msg_add=Usuario agregado correctamente
 relation_msg_add_exists=El usuario ya fue agregado
 relation_msg_delete=Se elimin\u00f3 de la tabla
 relation_msg_save=Relaciones creadas con \u00e9xito
+chain_meg_no_reject_outlet=No se puede rechazar la cadena, solo se pueden rechazar las cadenas con estado PENDIENTE DE APROBACION
