--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -332,3 +332,4 @@ relation_msg_add_exists=El usuario ya fue agregado
 relation_msg_delete=Se elimin\u00f3 de la tabla
 relation_msg_save=Relaciones creadas con \u00e9xito
 chain_meg_no_reject_outlet=No se puede rechazar la cadena, solo se pueden rechazar las cadenas con estado PENDIENTE DE APROBACION
+code_pending_kiernan=Pendiente Kiernan
