--- a/DiageoMDMWeb/pom.xml
+++ b/DiageoMDMWeb/pom.xml
@@ -25,6 +25,11 @@
     
     <dependencies>
         <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>sqljdbc4</artifactId>
+            <version>4.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
