--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -246,6 +246,7 @@ sta_pending_kam=Pendiente KAM/TMC Cadenas
 sta_pending_commercial_manager=Pendiente Commercial Manager
 sta_pending_approval=Pendiente Aprobaci\u00f3n
 status=Estado
+status_2=Estatus
 active=Activo
 inactive=Inactivo
 locked=Bloqueado
@@ -333,3 +334,9 @@ relation_msg_delete=Se elimin\u00f3 de la tabla
 relation_msg_save=Relaciones creadas con \u00e9xito
 chain_meg_no_reject_outlet=No se puede rechazar la cadena, solo se pueden rechazar las cadenas con estado PENDIENTE DE APROBACION
 code_pending_kiernan=Pendiente Kiernan
+distri_outlet=Sucursal del distribuidor
+sub_segment_distributor=Sub Segmento Distribuidor
+sub_segment_diageo=Sub Segmento Diageo
+sales_code=C\u00f3digo vendedor
+code_pos_distributor=C\u00f3digo PDV Distribuidor
+journey_plan=Journey Plan
