--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -362,8 +362,8 @@ report_pending_management=Pendiente por Gesti\u00f3n
 cod_distri=C\u00f3digo Distribuidor
 name_distri_office=Nombre Sucursal  
 user_management=Usuario a Gestionar
-report_relation_user_outlet=Reporte Relaci\u00f3n Usuario Outlet
-report_blancos=Reporte Blancos
+report_relation_user_outlet=Reporte Base completa
+report_blancos=Reporte Informacion incompleta
 source=Origen
 distributor_name=Nombre del Distribuidor
 name_tmc_kam=Nombre TMC/KAM
